--- a/TaskFund/LoginOrSignUP/LoginOrSignUpVC.storyboard
+++ b/TaskFund/LoginOrSignUP/LoginOrSignUpVC.storyboard
@@ -48,15 +48,22 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C1C-eS-cQc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C1C-eS-cQc">
                                 <rect key="frame" x="40" y="707" width="334" height="60"/>
                                 <color key="backgroundColor" name="Primary Orange"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="F6M-ME-l9E"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Get Started">
-                                    <fontDescription key="titleFontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="20"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Get Started">
+                                            <attributes>
+                                                <color key="NSColor" red="0.015686274510000001" green="0.18823529410000001" blue="0.2901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <font key="NSFont" size="20" name="ArialRoundedMTBold"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
                                     <color key="baseForegroundColor" name="PrimaryBlue"/>
                                 </buttonConfiguration>
                                 <userDefinedRuntimeAttributes>
@@ -64,6 +71,9 @@
                                         <integer key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="signUpBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Jwo-Kw-Kj4"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0F5-g6-630">
                                 <rect key="frame" x="56" y="787" width="302" height="35"/>
@@ -72,6 +82,9 @@
                                     <fontDescription key="titleFontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="18"/>
                                     <color key="baseForegroundColor" name="PrimaryOrange"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="loginBtn:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="QgF-jK-RUH"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -114,7 +127,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="TaskFund" width="1024" height="1024"/>
+        <image name="TaskFund" width="341" height="341"/>
         <namedColor name="Primary Orange">
             <color red="0.96078431372549022" green="0.3843137254901961" blue="0.035294117647058823" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
