--- a/TaskFund/Login/LoginVC.storyboard
+++ b/TaskFund/Login/LoginVC.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
@@ -14,21 +14,21 @@
             <objects>
                 <viewController storyboardIdentifier="LoginVC" id="Y6W-OH-hqX" customClass="LoginVC" customModule="TaskFund" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jkX-Yi-uC2" userLabel="TopView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TaskFund-text" translatesAutoresizingMaskIntoConstraints="NO" id="glO-5k-Qfk">
-                                        <rect key="frame" x="107.66666666666669" y="20" width="160" height="100"/>
+                                        <rect key="frame" x="107.5" y="20" width="160" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="160" id="3IR-hX-hD1"/>
                                             <constraint firstAttribute="height" constant="100" id="ofO-Ew-2bx"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9tu-lX-Xfg">
-                                        <rect key="frame" x="20" y="145" width="213.33333333333334" height="35"/>
+                                        <rect key="frame" x="20" y="145" width="213.5" height="35"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Welcome">
                                                 <attributes>
@@ -62,13 +62,13 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vlp-iX-8VE">
-                                <rect key="frame" x="40" y="290" width="295" height="150"/>
+                                <rect key="frame" x="40" y="290" width="320" height="150"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gva-et-TWn" userLabel="Email">
-                                        <rect key="frame" x="0.0" y="0.0" width="295" height="70"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GKf-xb-tbn">
-                                                <rect key="frame" x="0.0" y="0.0" width="295" height="70"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="17"/>
@@ -89,10 +89,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Njc-HH-CIA" userLabel="Password">
-                                        <rect key="frame" x="0.0" y="80" width="295" height="70"/>
+                                        <rect key="frame" x="0.0" y="80" width="320" height="70"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NLT-GZ-UeS">
-                                                <rect key="frame" x="0.0" y="0.0" width="295" height="70"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="17"/>
@@ -118,15 +118,15 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYg-xB-MZ3">
-                                <rect key="frame" x="30" y="450" width="136" height="29"/>
+                                <rect key="frame" x="30" y="450" width="80" height="21.5"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Forgot Password?">
-                                    <fontDescription key="titleFontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="14"/>
-                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="titleFontDescription" name="ArialHebrew-Light" family="Arial Hebrew" pointSize="7"/>
+                                    <color key="baseForegroundColor" name="PrimaryBlue"/>
                                 </buttonConfiguration>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6PQ-gJ-9A7">
-                                <rect key="frame" x="35" y="509" width="305" height="50"/>
+                                <rect key="frame" x="35" y="501.5" width="290" height="50"/>
                                 <color key="backgroundColor" name="PrimaryBlue"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="8r8-mU-8XP"/>
@@ -143,10 +143,10 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wYe-zC-G6C">
-                                <rect key="frame" x="0.0" y="732" width="375" height="80"/>
+                                <rect key="frame" x="0.0" y="587" width="375" height="80"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dJm-vX-UGb">
-                                        <rect key="frame" x="57" y="23.000000000000004" width="261" height="34.333333333333343"/>
+                                        <rect key="frame" x="57" y="23" width="261" height="34.5"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain">
                                             <attributedString key="attributedTitle">
@@ -251,6 +251,9 @@
                                             </attributedString>
                                             <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="goToSignUpVC:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="C1i-vF-UUV"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" name="PrimaryOrange"/>
@@ -272,8 +275,8 @@
                             <constraint firstItem="jkX-Yi-uC2" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="JWg-P0-p9N"/>
                             <constraint firstItem="jkX-Yi-uC2" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="O9M-rk-6Ql"/>
                             <constraint firstItem="WYg-xB-MZ3" firstAttribute="top" secondItem="vlp-iX-8VE" secondAttribute="bottom" constant="10" id="V5W-te-ZwN"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6PQ-gJ-9A7" secondAttribute="trailing" constant="35" id="aZg-2X-VsK"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vlp-iX-8VE" secondAttribute="trailing" constant="40" id="jkE-eL-LG5"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6PQ-gJ-9A7" secondAttribute="trailing" constant="50" id="aZg-2X-VsK"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vlp-iX-8VE" secondAttribute="trailing" constant="15" id="jkE-eL-LG5"/>
                             <constraint firstItem="wYe-zC-G6C" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="l4f-Q7-Ehu"/>
                             <constraint firstAttribute="bottom" secondItem="wYe-zC-G6C" secondAttribute="bottom" id="nfa-OM-Szn"/>
                             <constraint firstItem="wYe-zC-G6C" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="raA-5a-pSX"/>
@@ -303,7 +306,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xQY-6t-tgH" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xx7-D7-OtM">
-                        <rect key="frame" x="0.0" y="50" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -320,7 +323,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="TaskFund-text" width="256.66665649414062" height="63.333332061767578"/>
+        <image name="TaskFund-text" width="256.5" height="63"/>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <namedColor name="PrimaryBlue">
             <color red="0.015686274509803921" green="0.18823529411764706" blue="0.29019607843137257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
