--- a/TaskFund/SignUp/SignUpVC.storyboard
+++ b/TaskFund/SignUp/SignUpVC.storyboard
@@ -4,22 +4,67 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--SignUp-->
+        <!--Sign Up-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="SignUpVC" id="Y6W-OH-hqX" customClass="SignUpVC" customModule="TaskFund" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SWM-bP-glF">
+                                <rect key="frame" x="15" y="143" width="228" height="35"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Create">
+                                        <attributes>
+                                            <color key="NSColor" red="0.26418709750000002" green="0.84316962959999997" blue="0.75351554160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="30" name="ArialRoundedMTBold"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content=" ">
+                                        <attributes>
+                                            <font key="NSFont" size="30" name="ArialRoundedMTBold"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="Account">
+                                        <attributes>
+                                            <color key="NSColor" red="0.015686274510000001" green="0.18823529410000001" blue="0.2901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="30" name="ArialRoundedMTBold"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cHn-LF-Cav">
+                                <rect key="frame" x="15" y="198" width="363" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="q2Z-fy-TIO"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="PrimaryOrange"/>
+                        <constraints>
+                            <constraint firstItem="SWM-bP-glF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="bS6-Bl-1Mn"/>
+                            <constraint firstItem="cHn-LF-Cav" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="m5x-tK-Kb0"/>
+                            <constraint firstItem="cHn-LF-Cav" firstAttribute="top" secondItem="SWM-bP-glF" secondAttribute="bottom" constant="20" id="mqB-kC-637"/>
+                            <constraint firstItem="SWM-bP-glF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="15" id="uFn-qC-XHj"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cHn-LF-Cav" secondAttribute="trailing" constant="15" id="yw4-C4-dMr"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="SignUp" id="Gky-Lb-il7"/>
+                    <navigationItem key="navigationItem" title="Sign Up" id="Gky-Lb-il7">
+                        <barButtonItem key="leftBarButtonItem" image="chevron.left" catalog="system" id="R9R-yD-GWq">
+                            <color key="tintColor" name="SecondaryBlue"/>
+                            <connections>
+                                <action selector="backToLoginVC:" destination="Y6W-OH-hqX" id="rDj-6J-bbi"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -33,6 +78,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="w0i-Pb-j8E">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="SecondaryBlue"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -45,8 +93,12 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="chevron.left" catalog="system" width="97" height="128"/>
+        <namedColor name="PrimaryOrange">
+            <color red="0.96078431372549022" green="0.3843137254901961" blue="0.035294117647058823" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SecondaryBlue">
+            <color red="0.0" green="0.84313725490196079" blue="0.75294117647058822" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
